Added aggregate Account. Added endpoint PUT "/account/{id}" to "swagger.yaml". Improved aggregate Entry.
