# src/main/java/org/sollunae/ledger/rest/LedgerService.java
@@ -4,17 +4,21 @@ import org.axonframework.commandhandling.GenericCommandMessage;
 import org.axonframework.commandhandling.gateway.CommandGateway;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.sollunae.ledger.axon.account.command.CreateAccountCommand;
 import org.sollunae.ledger.axon.compound.command.CreateCompoundCommand;
 import org.sollunae.ledger.axon.entry.command.CreateEntryCommand;
 import org.sollunae.ledger.axon.entry.command.EntryAddToCompoundCommand;
 import org.sollunae.ledger.axon.entry.command.EntryRemoveFromCompoundCommand;
+import org.sollunae.ledger.model.AccountData;
 import org.sollunae.ledger.model.EntryData;
 import org.sollunae.ledger.model.JarData;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.HttpServerErrorException;
 
 import java.lang.invoke.MethodHandles;
+import java.util.Objects;
 import java.util.UUID;
 
 @Component
@@ -33,14 +37,32 @@ public class LedgerService implements LedgerApiDelegate {
     }
 
     @Override
+    public ResponseEntity<String> createAccount(String id, AccountData data) {
+        if (!Objects.equals(id, data.getAccount())) {
+            throw new HttpServerErrorException(HttpStatus.BAD_REQUEST);
+        }
+        Object createCommand = CreateAccountCommand.builder()
+            .id(id)
+            .data(data)
+            .build();
+        try {
+            commandGateway.sendAndWait(GenericCommandMessage.asCommandMessage(createCommand));
+            return ResponseEntity.status(HttpStatus.CREATED).body(id);
+        } catch (RuntimeException exception) {
+            LOGGER.error("Exception during command execution: {}", exception.getCause(), exception);
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(null);
+        }
+    }
+
+    @Override
     public ResponseEntity<String> createEntry(EntryData entry) {
         String id = UUID.randomUUID().toString();
-        CreateEntryCommand createEntryCommand = CreateEntryCommand.builder()
+        Object createCommand = CreateEntryCommand.builder()
             .id(id)
             .entry(entry)
             .build();
         try {
-            commandGateway.sendAndWait(GenericCommandMessage.asCommandMessage(createEntryCommand));
+            commandGateway.sendAndWait(GenericCommandMessage.asCommandMessage(createCommand));
             return ResponseEntity.status(HttpStatus.CREATED).body(id);
         } catch (RuntimeException exception) {
             LOGGER.error("Exception during command execution: {}", exception.getCause(), exception);
@@ -51,11 +73,11 @@ public class LedgerService implements LedgerApiDelegate {
     @Override
     public ResponseEntity<String> createCompound() {
         String id = UUID.randomUUID().toString();
-        CreateCompoundCommand createCompoundCommand = CreateCompoundCommand.builder()
+        Object createCommand = CreateCompoundCommand.builder()
             .id(id)
             .build();
         try {
-            commandGateway.sendAndWait(GenericCommandMessage.asCommandMessage(createCompoundCommand));
+            commandGateway.sendAndWait(GenericCommandMessage.asCommandMessage(createCommand));
             return ResponseEntity.status(HttpStatus.CREATED).body(id);
         } catch (RuntimeException exception) {
             LOGGER.error("Exception during command execution: {}", exception.getCause(), exception);
